test/files/neg/t0351.scala
abstract class Foo {
  def identity[T](x : => T) : (=> T)
}
